# akx

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  NEXT.md  README.md  debug_div.akx  format.sh  repl.md  test_tcc  test_tcc_compile.c  test_with_abi  test_with_abi.c
benchmark/: 01_fibonacci_recursive.akx  02_loop_intensive.akx  03_list_operations.akx  04_filesystem_io.akx  05_forms_system.akx  06_collatz_stress.akx  run.sh
builtins/: add.c  advanced_math.c  counter.c  math_helper.c  math_helper.h  println.c  simple.c
cmake/: ak24.cmake
cmd/akx/: CMakeLists.txt  akx.c  akx.h  commands.c  commands.h  help.c  help.h  main.c  nucleus_info.c  nucleus_info.h  nucleus_list.c  nucleus_list.h  repl.c  repl.h  repl_buffer.c  repl_display.c
cmd/akx/expects/: broken.akx  broken.akx.expect  broken_list.akx  complex.akx  quoted.akx  simple.akx.expect  test_delimiters.akx  test_nested_delimiters.akx  test_quote_virtual.akx
examples/: README.md  iter_demo.akx  load_builtins.akx  test_advanced.akx  test_all_assertions.akx  test_assertion_failure.akx  test_assertions.akx  test_comprehensive.akx  test_counter.akx  test_defines.akx  test_load_store.akx  test_mixed.akx  test_simple_assert.akx
examples/builtins/: config_demo.c  load_store.c
ideas/: bootstrapping-ad-infinitum.md  compiling.md
nucleus/: CMakeLists.txt  manifest.txt  model.md
nucleus/akx/: exec.c
nucleus/assert/: assert_eq.c  assert_false.c  assert_ne.c  assert_true.c  helpers.c
nucleus/cmp/: eq.c  gt.c  gte.c  lt.c  lte.c  neq.c  real_eq.c  real_gt.c  real_gte.c  real_lt.c  real_lte.c  real_neq.c
nucleus/core/: begin.c  car.c  cdr.c  cons.c  defined.c  if.c  import.c  lambda.c  let.c  loop.c  set.c
nucleus/forms/: form_add_affordance.c  form_define.c  form_invoke.c  form_matches.c  forms.md
nucleus/fs/: basename.c  close.c  delete.c  dirname.c  exists.c  file_read.c  file_write.c  fs_handles.c  fs_handles_internal.h  fs_module.h  fs_module_init.c  is_dir.c  is_file.c  list_dir.c  mkdir.c  module.md  module_lifecycle.c  open.c  path_join.c  read.c  read_file.c  rename.c  rmdir.c  seek.c  stat.c  tell.c  write.c  write_file.c
nucleus/imports/: io.akx  math.akx  stdlib.akx
nucleus/io/: print.c  putf.c  scanf.c
nucleus/iter/: iter.c
nucleus/logic/: and.c  not.c  or.c  real_and.c  real_not.c  real_or.c
nucleus/math/: div.c  eq.c  mod.c  real_add.c  real_div.c  real_mod.c  real_mul.c  real_sub.c
nucleus/os/: args.c  chdir.c  cwd.c  env.c
nucleus/str/: concat.c  split.c
nucleus/types/: is_int.c  is_lambda.c  is_nil.c  is_quote.c  is_real.c  is_str.c  is_sym.c
pkg/cell/: CMakeLists.txt  akx_cell.c  akx_cell.h  model.md
pkg/cell/tests/: main.c  tests.c  tests.h
pkg/core/: CMakeLists.txt  akx_core.c  akx_core.h
pkg/repl/: CMakeLists.txt  repl.c  repl.h  repl_buffer.h  repl_display.h  repl_history.c  repl_history.h  repl_input.c  repl_input.h
pkg/rt/: CMakeLists.txt  akx_rt.c  akx_rt.h  akx_rt_builtins.c  akx_rt_builtins.h  akx_rt_compiler.c  akx_rt_compiler.h  model.md
pkg/sv/: CMakeLists.txt  akx_sv.c  akx_sv.h
pkg/testing/: testing.h
playground/: test.akx
stdlib/: io.akx  math.akx  stdlib.akx
tests/: 00_load_builtins.akx  00_load_builtins.expect  00_load_println.akx  01_let_basic.akx  02_set_basic.akx  02_set_basic.expect  03_lambda_identity.akx  03_lambda_identity.expect  04_lambda_higher_order.akx  04_lambda_higher_order.expect  05_assert_true.akx  05_assert_true.expect  06_assert_false.akx  06_assert_false.expect  07_assert_eq.akx  07_assert_eq.expect  08_assert_ne.akx  08_assert_ne.expect  09_scope_nested.akx  09_scope_nested.expect  10_lambda_multi_param.akx  10_lambda_multi_param.expect  11_types_integer.akx  11_types_integer.expect  12_types_string.akx  12_types_string.expect  13_types_real.akx  13_types_real.expect  14_recursion_limit.akx  14_recursion_limit.expect  15_if_basic.akx  15_if_basic.expect  16_if_strict_truthiness.akx  16_if_strict_truthiness.expect  17_if_no_println.akx  18_if_external_as.akx  18_if_external_as.expect  19_while_external_as.akx  19_while_external_as.expect  20_operators_as_alias.akx  (+139 more)
tests/builtins/: add.c  eq.c  if.c  if_impl.c  mod.c  mul.c  print.c  return_lambda.c  return_nil.c  return_quote.c  sub.c
tests/helpers/: exec_nested_inner.akx  exec_nested_outer.akx  exec_with_args.akx  return_number.akx  return_string.akx  use_stdlib.akx
tools/: repl.akx
tools/syntax/: akx.tmLanguage.json  language-configuration.json  package.json  syntax.sh
